--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
   {% endblock %}
   {% block corecss %}
   <!-- Bootstrap CDN link -->
+  <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7_dtp.css" rel="stylesheet" type="text/css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
@@ -147,12 +148,49 @@
   </div>
   {% endif %}
 
-
   {% block page_header %}
   {% endblock %}
 
   {% block content %}
   {% endblock %}
+
+  <footer class="footer">
+    <!-- Begin Mailchimp Signup Form -->
+    </style>
+    <div class="container d-flex justify-content-center">
+    <div id="mc_embed_signup">
+      <form
+        action="https://featherstar.us17.list-manage.com/subscribe/post?u=9149d14a7f81b786be4a1ee54&amp;id=4e6fba4a14"
+        method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank"
+        novalidate>
+        <div id="mc_embed_signup_scroll">
+          <h2 class = "text-center">Mailing List</h2>
+          <div class="indicates-required visually-hidden"><span class="asterisk">*</span> indicates required</div>
+          <div class="mc-field-group">
+            <span class = "visually-hidden"><label for="mce-EMAIL">Email Address <span class="asterisk">*</span>
+            </label></span>
+            <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder = "e.g. learntodive@divecourses.com">
+          </div>
+          <div id="mce-responses" class="clear foot">
+            <div class="response" id="mce-error-response" style="display:none"></div>
+            <div class="response" id="mce-success-response" style="display:none"></div>
+          </div>
+          <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+              name="b_9149d14a7f81b786be4a1ee54_4e6fba4a14" tabindex="-1" value=""></div>
+          <div class="optionalParent">
+            <div class="clear foot">
+              <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+              <p class="brandingLogo"><a href="http://eepurl.com/h4c7DD"
+                  title="Mailchimp - email marketing made easy and fun"><img
+                    src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"></a></p>
+            </div>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+  </footer>
 
   {% block postloadjs %}
   <script type="text/javascript">
@@ -161,6 +199,26 @@
       return new bootstrap.Toast(toastEl)
     });
     toastList.forEach(toast => toast.show());
+  </script>
+  <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+  <script type='text/javascript'>
+    (function ($) {
+      window.fnames = new Array();
+      window.ftypes = new Array();
+      fnames[0] = 'EMAIL';
+      ftypes[0] = 'email';
+      fnames[1] = 'FNAME';
+      ftypes[1] = 'text';
+      fnames[2] = 'LNAME';
+      ftypes[2] = 'text';
+      fnames[3] = 'ADDRESS';
+      ftypes[3] = 'address';
+      fnames[4] = 'PHONE';
+      ftypes[4] = 'phone';
+      fnames[5] = 'BIRTHDAY';
+      ftypes[5] = 'birthday';
+    }(jQuery));
+    var $mcj = jQuery.noConflict(true);
   </script>
   {% endblock %}
 
