--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 
-<div class="container">
+<div class="container content">
     <div class="row">
         <div class="col">
             <h1 class="my-5">
