--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block content %}
+<div class="container-fluid content">
 <div id="carouselExampleCaptions" class="carousel slide d-none d-sm-flex position-relative" data-bs-ride="carousel">
     <div class = "container-fluid position-absolute top-0 start-0 w-100 h-100" id="overlay-text">
         <div class="row h-100 w-100">
@@ -99,6 +100,11 @@
         </div>
     </div>
 </div>
+<div>
+    <hr>
+</div>
+</div>
+
 
 
 {% endblock %}
