--- a/static/css/base.css
+++ b/static/css/base.css
@@ -30,6 +30,10 @@ flex-direction: column;
     align-items: center;    
 }
 
+#mc_embed_signup h2{
+    margin-bottom:10px;
+}
+
 /* --Style bag icon--------------------------------------- */
 .bi-bag{
     font-size: 1.5em;
