--- a/templates/base.html
+++ b/templates/base.html
@@ -118,7 +118,7 @@
           <ul class="navbar-nav me-auto me-lg-1 ms-lg-auto mb-2 mb-lg-0">
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
-                aria-expanded="false"><i class="bi bi-person"></i></a>
+                aria-expanded="false"><span class = "d-lg-none">Account</span><i class="bi bi-person d-none d-lg-block"></i></a>
               <ul class="dropdown-menu left-auto">
                 {% if user.is_authenticated %}
                 <li>
@@ -139,8 +139,8 @@
           </ul>
           <li class="nav-item">
             <div class="bag-qty-container">
-            <a class="nav-link postition-relative me-2" href="{% url 'view_bag' %}"><i class="bi bi-bag"></i></a>
-            <div class = "bag-qty border-radius-50">
+            <a class="nav-link postition-relative me-2" href="{% url 'view_bag' %}"><span class = "d-lg-none">Cart ({{product_count}})</span><i class="d-none d-lg-blockbi bi-bag"></i></a>
+            <div class = "d-none d-lg-block bag-qty border-radius-50">
             <h6 class = "text-center fs-6">{{product_count}}</h6>
             </div>
           </div>
@@ -229,14 +229,21 @@
       <div class="col-md-2">
         <h6 class = "fs-5">Account</h6>
         <p>
+          {% if user.is_authenticated %}
+          <a class="text-reset text-decoration-none" href="{% url 'profile' user.userprofile.id %}">My Profile</a>
+          <a class = "text-reset text-decoration-none" href = "{% url 'account_logout' %}">Logout</a>
+          {% else %}
           <a class = "text-reset text-decoration-none" href="{% url 'account_signup' %}">Register</a><br>
           <a class = "text-reset text-decoration-none" href = "{% url 'account_login' %}">Login</a>
+          {% endif %}
         </p>
       </div>
       <div class="col-md-2">
-        <a href="https://www.instagram.com" rel="noopener noreferrer" target="_blank"></a><i class="bi bi-instagram fs-3 me-1"></i></a>
-        <a href="https://www.facebook.com" rel="noopener noreferrer" target="_blank"></a><i class="bi bi-facebook fs-3 me-1"></i></a>
-        <a href="https://www.twitter.com" rel="noopener noreferrer" target="_blank"></a><i class="bi bi-twitter fs-3"></i></a>
+        <p>
+        <a class = "text-reset text-decoration-none fs-3 me-1" href="https://www.instagram.com" rel="noopener noreferrer" target="_blank"><i class="bi bi-instagram"></i></a>
+        <a class = "text-reset text-decoration-none fs-3 me-1" href="https://www.facebook.com" rel="noopener noreferrer" target="_blank"><i class="bi bi-facebook"></i></a>
+        <a class = "text-reset text-decoration-none fs-3" href="https://www.twitter.com" rel="noopener noreferrer" target="_blank"><i class="bi bi-twitter"></i></a>
+      </p>
       </div>
     </div>
   </div>
