--- a/templates/base.html
+++ b/templates/base.html
@@ -118,7 +118,7 @@
           <ul class="navbar-nav me-auto me-lg-1 ms-lg-auto mb-2 mb-lg-0">
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
-                aria-expanded="false"><span class = "d-lg-none">Account</span><i class="bi bi-person d-none d-lg-block"></i></a>
+                aria-expanded="false"><span class = "d-lg-none">Account</span><i class="d-none d-lg-inline-block bi bi-person"></i></a>
               <ul class="dropdown-menu left-auto">
                 {% if user.is_authenticated %}
                 <li>
@@ -139,7 +139,7 @@
           </ul>
           <li class="nav-item">
             <div class="bag-qty-container">
-            <a class="nav-link postition-relative me-2" href="{% url 'view_bag' %}"><span class = "d-lg-none">Cart ({{product_count}})</span><i class="d-none d-lg-blockbi bi-bag"></i></a>
+            <a class="nav-link postition-relative me-2" href="{% url 'view_bag' %}"><span class = "d-lg-none">Cart ({{ product_count }})</span><i class="d-none d-lg-block bi bi-bag"></i></a>
             <div class = "d-none d-lg-block bag-qty border-radius-50">
             <h6 class = "text-center fs-6">{{product_count}}</h6>
             </div>
@@ -148,7 +148,7 @@
         </div>
       </div>
     </nav>
-    <div>
+    <div class="container">
       <form class="d-lg-none d-flex" method="GET" action="{% url 'search_products' %}">
         <input class="form-control me-2" type="search" name="q" placeholder="What are you looking for?"
           aria-label="Search">
@@ -231,7 +231,7 @@
         <p>
           {% if user.is_authenticated %}
           <a class="text-reset text-decoration-none" href="{% url 'profile' user.userprofile.id %}">My Profile</a>
-          <a class = "text-reset text-decoration-none" href = "{% url 'account_logout' %}">Logout</a>
+          <a class = "text-reset text-decoration-none" href = "{% url 'account_logout' %}">Login</a>
           {% else %}
           <a class = "text-reset text-decoration-none" href="{% url 'account_signup' %}">Register</a><br>
           <a class = "text-reset text-decoration-none" href = "{% url 'account_login' %}">Login</a>
