--- a/products/templates/products/create_product.html
+++ b/products/templates/products/create_product.html
@@ -1,26 +1,48 @@
-{% extends "base.html"%}
+{% extends "base.html" %}
 {% load static %}
-{% load crispy_forms_tags %}
-
+{% block extra_css %}
+{{ block.super }}
+<link rel="stylesheet" href="{% static 'products/css/products.css' %}">
+{% endblock %}
 {% block content %}
-<section>
-    <div class="d-flex align-items-center p-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm col-lg-8 col-xl-8 col-xxl-8 d-flex align-items-center justify-content-center pb-5">
-                    <p class="heading-font text-center font-size-96 mb-5">Product Creation <br> and Editing</p>
-                </div>
-                <div class="col-sm col-lg-4 col-xl-4 col-xxl-4 translucent-body mb-5">
-                    <form method="POST" class="p-1">
-                        {% csrf_token %}
-                        {{ form | crispy }}
-                        <br>
-                        <button class="btn btn-primary ms-auto me-3" type="submit">Save</button><a href="{{ view.get_success_url }}" class="btn btn-secondary">Cancel</a>
-                    </form>
+
+{% with product.inventory_set.all as inventory %}
+
+<div class="container">
+    <div class="row">
+      <div class="col test">
+        <h1 class="my-5">
+          CREATE/UPDATE PRODUCT
+        </h1>
+      </div>
+    </div>
+</div>
+
+<div class="container">
+        <div class="d-flex align-items-center p-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-lg-6 pt-2">
+                        <img class="img-fluid" src="{%if not object.image.url %}{% static 'img/scuba-equipment-shop.jpg'%} {% else %}{{object.image.url}}{% endif %}" alt="{{object.name}}">
+                    </div>
+                    <div class="col-12 col-lg-6 translucent-body mb-5">
+                        <form method="POST" class="p-1">
+                            {% csrf_token %}
+                            {{ form | crispy }}
+                            <br>
+                            <button class="btn btn-primary ms-auto me-3" type="submit">Save</button><a href="{{request.META.HTTP_REFERER|escape}}" class="btn btn-secondary">Cancel</a>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</section>
+</div>
+    {% endwith %}
 
-{% endblock %}
+    {% endblock %}
+
+    {% block postloadjs %}
+    {{ block.super }}
+    <script src="{% static 'products/js/products.js' %}"></script>
+    {% endblock %}
