--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -34,9 +34,9 @@
                     <div class="pagination">  
                         {% if is_paginated %}
                           {% if page_obj.has_previous %}
-                            <a href="?{% param_replace page=1 %}">First</a>
+                            <a href="?{% param_replace page=1 %}"><i class="bi bi-chevron-bar-left"></i></a>
                             {% if page_obj.previous_page_number != 1 %}
-                              <a href="?{% param_replace page=page_obj.previous_page_number %}">Previous</a>
+                              <a href="?{% param_replace page=page_obj.previous_page_number %}"><i class="bi bi-chevron-left"></i></a>
                             {% endif %}
                           {% endif %}                        
                           Page {{ page_obj.number }} of {{ paginator.num_pages }}                        
@@ -46,7 +46,6 @@
                             {% endif %}
                             <a href="?{% param_replace page=paginator.num_pages %}"><i class="bi bi-chevron-bar-right"></i></a>
                           {% endif %}                        
-                          <p>{{ page_obj.start_index }}—{{ page_obj.end_index }}</p>
                         {% endif %}
                     </div>
                 </div>
@@ -70,6 +69,23 @@
                     </ul>
                     </div>
                 {% endfor %}
+            </div>
+            <div class="pagination justify-content-end">  
+                {% if is_paginated %}
+                  {% if page_obj.has_previous %}
+                    <a href="?{% param_replace page=1 %}"><i class="bi bi-chevron-bar-left"></i></a>
+                    {% if page_obj.previous_page_number != 1 %}
+                      <a href="?{% param_replace page=page_obj.previous_page_number %}"><i class="bi bi-chevron-left"></i></a>
+                    {% endif %}
+                  {% endif %}                        
+                  Page {{ page_obj.number }} of {{ paginator.num_pages }}                        
+                  {% if page_obj.has_next %}
+                    {% if page_obj.next_page_number != paginator.num_pages %}
+                      <a href="?{% param_replace page=page_obj.next_page_number %}"><i class="bi bi-chevron-right"></i></a>
+                    {% endif %}
+                    <a href="?{% param_replace page=paginator.num_pages %}"><i class=" me-4 bi bi-chevron-bar-right"></i></a>
+                  {% endif %}                        
+                {% endif %}
             </div>
             </div>
         </div>
