add brand and category edit buttons in product page

--- a/products/templates/products/create_product.html
+++ b/products/templates/products/create_product.html
@@ -8,41 +8,43 @@
 
 {% with product.inventory_set.all as inventory %}
 
-<div class="container">
+<div class="container content">
     <div class="row">
-      <div class="col test">
-        <h1 class="my-5">
-          CREATE/UPDATE PRODUCT
-        </h1>
-      </div>
+        <div class="col test">
+            <h1 class="my-5">
+                CREATE/UPDATE PRODUCT
+            </h1>
+        </div>
     </div>
 </div>
 
-<div class="container">
-        <div class="d-flex align-items-center p-5">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12 col-lg-6 pt-2">
-                        <img class="img-fluid" src="{%if not object.image.url %}{% static 'img/scuba-equipment-shop.jpg'%} {% else %}{{object.image.url}}{% endif %}" alt="{{object.name}}">
-                    </div>
-                    <div class="col-12 col-lg-6 translucent-body mb-5">
-                        <form method="POST" class="p-1">
-                            {% csrf_token %}
-                            {{ form | crispy }}
-                            <br>
-                            <button class="btn btn-primary ms-auto me-3" type="submit">Save</button><a href="{{request.META.HTTP_REFERER|escape}}" class="btn btn-secondary">Cancel</a>
-                        </form>
-                    </div>
+<div class="container content">
+    <div class="d-flex align-items-center p-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-lg-6 pt-2">
+                    <img class="img-fluid"
+                        src="{%if not object.image.url %}{% static 'img/scuba-equipment-shop.jpg'%} {% else %}{{object.image.url}}{% endif %}"
+                        alt="{{object.name}}">
+                </div>
+                <div class="col-12 col-lg-6 translucent-body mb-5">
+                    <form method="POST" class="p-1">
+                        {% csrf_token %}
+                        {{ form | crispy }}
+                        <br>
+                        <button class="btn btn-primary ms-auto me-3" type="submit">Save</button><a
+                            href="{{request.META.HTTP_REFERER|escape}}" class="btn btn-secondary">Cancel</a>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
 </div>
-    {% endwith %}
+{% endwith %}
 
-    {% endblock %}
+{% endblock %}
 
-    {% block postloadjs %}
-    {{ block.super }}
-    <script src="{% static 'products/js/products.js' %}"></script>
-    {% endblock %}
+{% block postloadjs %}
+{{ block.super }}
+<script src="{% static 'products/js/products.js' %}"></script>
+{% endblock %}
