--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -78,7 +78,7 @@
                         <input type="submit" value="Add to Cart" class="btn btn-primary">
                         <a class = "btn btn-primary" href="{% url 'view_bag' %}">Go to bag</a>
                     </div>
-                        <a href="{{request.META.HTTP_REFERER|escape}}" class="btn btn-dark mt-2"><i class="bi bi-chevron-double-left"></i>Continue Shopping</a>
+                        <a href="{% url 'all_products' %}" class="btn btn-dark mt-2"><i class="bi bi-chevron-double-left"></i>Continue Shopping</a>
                     </div>
                     <input type="hidden" name="sku" value="" id="sku">
                     <input type="hidden" name="redirect_url" value="{{request.path}}">
@@ -86,11 +86,7 @@
             </form>
         </div>
     </div>
-
-    <!-- <h1>{% for variant in inventory %}</h1>
-    <h1>{{ variant.sku }}: {{variant.size}}: {{variant.color}}: {{ variant.count }}</h1>
-    {% endfor %} -->
-
+</div>
 
     {% endwith %}
 
