--- a/templates/base.html
+++ b/templates/base.html
@@ -1,25 +1,23 @@
-{% load static %}
-
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
   {% block meta %}
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Scubasport, Scuba Diving, Learn to Scuba UK, Shop Scuba Equipment">
-  <meta name="keywords"
-    content="Scuba Equipment, Learn to Scuba Dive, Scuba Diving Near me, Scuba Diving Courses UK, Shop Scuba Equipment, Scuba Equipment Rental, Beginner Scuba Diving, Scuba Diving Lesson Cost, PADI Certification Cost, How do I become a certified diver, how much does it cost to learn to scuba dive, wet suits, dry suits, regulators, fins, masks, snorkels, BCDS, Diving qualifications, become a diving instructor">
+  <meta name="description" content="Scubasport website to learn to dive and buy diving equipment">
+  <meta name="keywords" content="Scuba Diving, Learn to Scuba UK, Shop Scuba EquipmentScuba Equipment, Learn to Scuba Dive, Scuba Diving Near me, Scuba Diving Courses UK, Shop Scuba Equipment, Scuba Equipment Rental, Beginner Scuba Diving, Scuba Diving Lesson Cost, PADI Certification Cost, How do I become a certified diver, how much does it cost to learn to scuba dive, wet suits, dry suits, regulators, fins, masks, snorkels, BCDS, Diving qualifications, become a diving instructor">
   <meta name="author" content="Daniel Richards">
   {% endblock %}
   {% block extra_meta %}
   {% endblock %}
+
+  {% load static %}
+
   {% block corecss %}
   <!-- Bootstrap CDN link -->
   <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7_dtp.css" rel="stylesheet" type="text/css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="{% static 'css/base.css' %}">
   {% endblock %}
@@ -31,15 +29,10 @@
   <!-- Font awesome CDN link -->
   <script src="https://kit.fontawesome.com/e9c73d7092.js" crossorigin="anonymous"></script>
   <!-- JQuery CDN link -->
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-  </script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <!-- Bootstrap Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <!-- Stripe -->
   <script src="https://js.stripe.com/v3/"></script>
   {% endblock %}
@@ -51,12 +44,11 @@
 </head>
 
 <body>
-  <header>
+  <header class = "content">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'home' %}">Scubasport</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
-          aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse d-lg-none" id="navbarTogglerDemo02">
@@ -160,7 +152,7 @@
     </div>
   </header>
   {% if messages %}
-  <div class="message-container">
+  <div class="message-container content">
     {% for message in messages %}
     {% include 'includes/success.html' %}
     {% endfor %}
@@ -173,7 +165,7 @@
   {% block content %}
   {% endblock %}
 
-  <footer class="footer mt-5">
+  <footer class="footer mt-5 container-fluid">
     <!-- Begin Mailchimp Signup Form -->
     <div class="container d-flex justify-content-center w-100">
     <div id="mc_embed_signup">
@@ -205,7 +197,7 @@
       </form>
     </div>
   </div>
-  <div class="container-fluid ps-3 pt-3 pe-3 white-text bg-dark">
+  <div class="container-fluid w-100vw ps-3 pt-3 pe-3 white-text bg-dark">
     <div class="row">
       <div class="col-md-4">
         <h6 class="fs-5">Scubasport</h6>
