--- a/products/templates/products/update_inventory.html
+++ b/products/templates/products/update_inventory.html
@@ -2,6 +2,15 @@
 {% load static %}
 {% block content %}
 
+<div class="container">
+    <div class="row">
+      <div class="col">
+        <h1 class="my-5">
+          UPDATE INVENTORY
+        </h1>
+      </div>
+    </div>
+</div>
 <div>
     <p>SKU: {{ object.sku }}</p>
     <p>Brand: {{ object.product.brand }}</p>
