--- a/products/templates/products/delete_color.html
+++ b/products/templates/products/delete_color.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
+
 {% block content %}
+
 <div class="container">
     <div class="row">
       <div class="col">
@@ -10,8 +12,12 @@
       </div>
     </div>
 </div>
+
 <form action='.' method='POST'>{% csrf_token %}
-    <h1>Are you sure you want to delete the product?"{{ object.name }}"?</h1>
+    <h1>Are you sure you want to delete the color?"{{ object.name }}"?</h1>
+    <h2>This will remove colors from associate products and set to blank.</h2>
     <p><input type='submit' value='Yes' />  <a href='../'>Cancel</a></p>
+
 </form>
+
 {% endblock %}
