--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -65,7 +65,7 @@
                         </div>
                     <ul class="list-group list-group-flush border-top-0">
                         <li class="list-group-item border-0">£{{product.price}}</li>
-                        <li class="list-group-item border-0">Rating: {{product.rating}}<a href="{% url 'product_detail' product.slug %}" class="btn btn-light">Details</a></li>
+                        <li class="list-group-item border-0"><a href="{% url 'product_detail' product.slug %}" class="btn btn-light">Details</a></li>
                     </ul>
                     </div>
                 {% endfor %}
