--- a/products/templates/products/category_list.html
+++ b/products/templates/products/category_list.html
@@ -11,18 +11,18 @@
     <div class="row">
       <div class="col">
         <h1 class="my-5">
-          COLOR MANAGEMENT
+          CATEGORY MANAGEMENT
         </h1>
       </div>
     </div>
 </div>
 <div class = "container">
     <div class=" mx-auto w-50 table-responsive">
-        <div class = "d-flex w-100 justify-content-end"><a class = "btn btn-success" href="{% url 'add_color' %}">Add</a></div>
+        <div class = "d-flex w-100 justify-content-end"><a class = "btn btn-success" href="{% url 'add_category' %}">Add</a></div>
     <table class="table table-sm">
       <thead class="thead-dark">
         <tr>
-          <th scope="col">COLOR</th>
+          <th scope="col">CATEGORY</th>
           <th></th>
         </tr>
       </thead>
@@ -30,7 +30,7 @@
         <tr>
           {% for object in object_list %}
           <th scope="row">{{ object.name }}</th>
-          <td><div class = 'd-flex justify-content-end'><a class = 'me-3 btn btn-primary' href="{% url 'update_color' object.id %}">Update</a><a class = 'btn btn-danger' href="{% url 'delete_color' object.id %}">Remove</a></div></td>
+          <td><div class = 'd-flex justify-content-end'><a class = 'me-3 btn btn-primary' href="{% url 'update_category' object.id %}">Update</a><a class = 'btn btn-danger' href="{% url 'delete_category' object.id %}">Remove</a></div></td>
         </tr>
         {% endfor %}
       </tbody>
