--- a/products/templates/products/create_product.html
+++ b/products/templates/products/create_product.html
@@ -32,8 +32,8 @@
                         {% csrf_token %}
                         {{ form | crispy }}
                         <a id = "color_link" class = "btn btn-primary" href = "{% url 'color_list' %}">Colors</a>
-                        <a id = "category_link" class = "btn btn-primary" href = "{% url 'all_products' %}">Categories</a>
-                        <a id = "brand_link" class = "btn btn-primary" href = "{% url 'all_products' %}">Brand</a>
+                        <a id = "category_link" class = "btn btn-primary" href = "{% url 'category_list' %}">Categories</a>
+                        <a id = "brand_link" class = "btn btn-primary" href = "{% url 'brand_list' %}">Brand</a>
                         <br>
                         <button class="btn btn-primary ms-auto me-3" type="submit">Save</button><a
                             href="{{request.META.HTTP_REFERER|escape}}" class="btn btn-secondary">Cancel</a>
