--- a/products/templates/products/delete_color.html
+++ b/products/templates/products/delete_color.html
@@ -13,11 +13,12 @@
     </div>
 </div>
 
-<form action='.' method='POST'>{% csrf_token %}
-    <h1>Are you sure you want to delete the color?"{{ object.name }}"?</h1>
-    <h2>This will remove colors from associate products and set to blank.</h2>
-    <p><input type='submit' value='Yes' />  <a href='../'>Cancel</a></p>
-
-</form>
+<div class = "w-25 mx-auto border rounded p-5 ">
+    <form action='.' method='POST'>{% csrf_token %}
+        <p>Are you sure you want to delete {{ object.name }}?</p>
+        <p>This will set all values to blank in linked items.</p>
+        <p><input class = "btn btn-primary" type = 'submit' value='Yes'/>  <a class = "btn btn-secondary" href='../'>Cancel</a></p>
+    </form>
+</div>
 
 {% endblock %}
