--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,10 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="{% static 'css/base.css' %}">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/favicon_io/favicon-32x32.png' %}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon_io/favicon-16x16.png' %}">
+  <link rel="manifest" href="{% static 'img/favicon_io/site.webmanifest' %}">
   {% endblock %}
 
   {% block extra_css %}
@@ -75,6 +79,9 @@
                   <a class=" dropdown-item staff" href="{% url 'create_product' %}">Create Product</a>
                 </li>
                 <li>
+                  <a class=" dropdown-item staff" href="{% url 'category_list' %}">Manage Categories</a>
+                </li>
+                <li>
                   <a class=" dropdown-item staff" href="{% url 'inventory_list' %}">Manage Inventory</a>
                 </li>
                 {% endif %}
@@ -89,6 +96,13 @@
                 <li><a class="dropdown-item"
                     href="{% url 'all_products' %}?brand__name__iexact={{brand.name}}">{{ brand.name | upper }}</a></li>
                 {% endfor %}
+                {% if user.is_authenticated %}
+                {% if user.is_staff %}
+                <li>
+                  <a class=" dropdown-item staff" href="{% url 'brand_list' %}">Manage Brands</a>
+                </li>
+                {% endif %}
+                {% endif %}
               </ul>
             </li>
             <!-- Dropdown menu for courses -->
