--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -96,7 +96,8 @@
                                 <p>£{{delivery}}</p>
                                 <p>£{{grand_total}}</p>
                             </div>
-                            <div class = "w-100 d-flex justify-content-end">
+                            <div class = "d-flex justify-content-end">
+                                <a href="{% url 'all_products' %}" class="btn btn-dark me-2"><i class="bi bi-chevron-double-left"></i>Continue Shopping</a>
                                 <a class="btn btn-primary" href="{% url 'checkout' %}">Proceed to Checkout</a>
                             </div>
                         </div>
