style primary buttons

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -86,7 +86,7 @@
                     EQUIPMENT TRUSTED BY OUR INSTRUCTORS
                 </p>
             </div>
-            <div role="button" class="home-inner-button-container">
+            <div role="button" class="home-inner-button-container btn btn-primary">
                 <a id="shop-now" href="{% url 'all_products' %}">Shop Now</a>
             </div>
         </div>
