--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@
   <header class = "content">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'home' %}">Scubasport</a>
+        <a class="navbar-brand" href="{% url 'home' %}"><img class = "logo" src="{% static 'img/logo.webp' %}" alt="Scubasport"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -250,7 +250,7 @@
       <div class="col-md-2">
         <p>
         <a class = "text-reset text-decoration-none fs-3 me-1" href="https://www.instagram.com" rel="noopener noreferrer" target="_blank"><i class="bi bi-instagram"></i></a>
-        <a class = "text-reset text-decoration-none fs-3 me-1" href="https://www.facebook.com" rel="noopener noreferrer" target="_blank"><i class="bi bi-facebook"></i></a>
+        <a class = "text-reset text-decoration-none fs-3 me-1" href="https://www.facebook.com/Scubasport-103293935757804" rel="noopener noreferrer" target="_blank"><i class="bi bi-facebook"></i></a>
         <a class = "text-reset text-decoration-none fs-3" href="https://www.twitter.com" rel="noopener noreferrer" target="_blank"><i class="bi bi-twitter"></i></a>
       </p>
       </div>
