add course views, urls, templates and models

--- a/courses/templates/courses/course_confirm_delete.html
+++ b/courses/templates/courses/course_confirm_delete.html
@@ -5,7 +5,7 @@
     <div class="row">
       <div class="col">
         <h1 class="my-5">
-          DELETE PRODUCT
+          DELETE COURSE
         </h1>
       </div>
     </div>
