--- a/templates/includes/success.html
+++ b/templates/includes/success.html
@@ -1,7 +1,7 @@
 <div data-autohide = "false">
-<div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+<div class="toast toast-success" role="alert" aria-live="assertive" aria-atomic="true">
   <div class="toast-header">
-    <strong class="mr-auto">Success</strong>
+    <strong class="mr-auto">SUCCESS</strong>
     <button type="button" class="ms-auto close" data-bs-dismiss="toast" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
