--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -16,7 +16,7 @@
     <div class="row">
         <div class="col">
             {% if bag_items %}
-            <div class="container">
+            <div class="container table-responsive">
                 <table class="table">
                     <thead>
                         <tr>
@@ -32,7 +32,7 @@
                         {% for item in bag_items %}
                         <tr>
                             <td class="w-25">
-                                <img class="img-fluid rounded"
+                                <img class="img-fluid rounded h-150px"
                                     src="{% if item.inventory.product.image %} {{ item.inventory.product.image.url }} {% else %} {% static 'img/garbage-home-triple.webp' %} {% endif %}"
                                     alt="{{item.inventory.product.friendly_name}}">
                             </td>
