--- a/products/templates/products/color_list.html
+++ b/products/templates/products/color_list.html
@@ -16,8 +16,8 @@
       </div>
     </div>
 </div>
-<div class = "container">
-    <div class=" mx-auto w-50 table-responsive">
+<div class = "container d-flex flex-column align-items-center content justify-content-center">
+    <div class="table-responsive">
         <div class = "d-flex w-100 justify-content-end"><a class = "btn btn-success" href="{% url 'add_color' %}">Add</a></div>
     <table class="table table-sm">
       <thead class="thead-dark">
