--- a/products/templates/products/delete_category.html
+++ b/products/templates/products/delete_category.html
@@ -12,11 +12,12 @@
       </div>
     </div>
 </div>
-<div class = "w-25 mx-auto border rounded p-5 ">
-  <form action='.' method='POST'>{% csrf_token %}
+<div class="container d-flex flex-column align-items-center content justify-content-center">
+  <div>
+    <form action='.' method='POST'>{% csrf_token %}
       <p>Are you sure you want to delete {{ object.name }}?</p>
-      <p>This will set all values to blank in linked items.</p>
-      <p><input class = "btn btn-primary" type = 'submit' value='Yes'/>  <a class = "btn btn-secondary" href='../'>Cancel</a></p>
-  </form>
+      <p><input class = "btn btn-primary" type = 'submit' value='Yes' />  <a class = "btn btn-secondary" href='../'>Cancel</a></p>
+    </form>
+</div>
 </div>
 {% endblock %}
