--- a/products/templates/products/update_color.html
+++ b/products/templates/products/update_color.html
@@ -16,13 +16,15 @@
       </div>
     </div>
 </div>
-<div class = "w-25 mx-auto border rounded p-5 ">
-<form action='.' method='POST'>{% csrf_token %}
+<div class="container d-flex flex-column align-items-center content justify-content-center">
+  <div>
+  <form action='.' method='POST'>{% csrf_token %}
     {{ form | crispy }}
     <div class = "mt-3 d-flex w-100 justify-content-center">
-        <input class = "btn btn-primary" type='submit' value='Save' /> 
-    </div>  
+        <input class = "btn btn-primary me-3" type='submit' value='Save'><a class = "btn btn-secondary" href='../'>Cancel</a>
+      </div>  
 </form>
+</div>
 </div>
 
 {% endblock %}
