--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,10 +1,6 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
-@import url('https://fonts.googleapis.com/css2?family=Poller+One&family=Urbanist:wght@200;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poller+One&family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-
-html, body {
-    height: 100%;
-  }
 
 /* root colors and styles */
 :root {
@@ -19,12 +15,13 @@ html, body {
 }
 
 body {
-display: flex;
-flex-direction: column;
-padding: 0;
-margin:0;
-font-family: var(--body-font);
-font-weight: var(--body-weight);
+    height:100%;
+    display:flex;
+    flex-direction:column;
+    padding: 0;
+    margin:0;
+    font-family: var(--body-font);
+    font-weight: var(--body-weight);
 }
 
 h1,h2,h3,h4,h5,h6{
@@ -145,7 +142,16 @@ input[type=number] {
     position: fixed;
     top:72px;
     right:72px;
-    z-index: 1000;
+    z-index: 9999999;
+    max-width: 200px;
+}
+
+.toast-info{
+    border:3px solid var(--spume);
+}
+
+.toast-success{
+    border:3px solid green;
 }
 
 /*------------Profile Pages--------------------------------*/
@@ -369,4 +375,8 @@ input[type=number] {
 
 .create-edit{
     text-justify: center;
+}
+
+.h-150px{
+    height: 150px;
 }
